--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="author" content="c__beck">
   <meta name="description" content="a recipe storage app.">
-
+  <link href="https://fonts.googleapis.com/css?family=Fira+Sans:400,700,900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="/styles/style.css">
   <script src="/scripts/app.js" defer></script>
   <title>Recipe App</title>
@@ -21,6 +21,19 @@
           <div> <!-- sidebar -->
             <h2>Ingredients</h2>
             <div data-ingredients>
+              <h3>Wet</h3>
+              <ul>
+                <li>Ingredient 1</li>
+                <li>Ingredient 2</li>
+                <li>Ingredient 3</li>
+              </ul>
+              <h3>Dry</h3>
+              <ul>
+                <li>Ingredient 1</li>
+                <li>Ingredient 2</li>
+                <li>Ingredient 3</li>
+              </ul>
+              <h3>Mix-Ins</h3>
               <ul>
                 <li>Ingredient 1</li>
                 <li>Ingredient 2</li>
