--- a/index.html
+++ b/index.html
@@ -21,24 +21,30 @@
           <div> <!-- sidebar -->
             <h2>Ingredients</h2>
             <div data-ingredients>
-              <h3>Wet</h3>
-              <ul>
-                <li>Ingredient 1</li>
-                <li>Ingredient 2</li>
-                <li>Ingredient 3</li>
-              </ul>
-              <h3>Dry</h3>
-              <ul>
-                <li>Ingredient 1</li>
-                <li>Ingredient 2</li>
-                <li>Ingredient 3</li>
-              </ul>
-              <h3>Mix-Ins</h3>
-              <ul>
-                <li>Ingredient 1</li>
-                <li>Ingredient 2</li>
-                <li>Ingredient 3</li>
-              </ul>
+              <div>
+                <h3>Wet</h3>
+                <ul>
+                  <li>Ingredient 1</li>
+                  <li>Ingredient 2</li>
+                  <li>Ingredient 3</li>
+                </ul>
+              </div>
+              <div>
+                <h3>Dry</h3>
+                <ul>
+                  <li>Ingredient 1</li>
+                  <li>Ingredient 2</li>
+                  <li>Ingredient 3</li>
+                </ul>
+              </div>
+              <div>
+                <h3>Mix-Ins</h3>
+                <ul>
+                  <li>Ingredient 1</li>
+                  <li>Ingredient 2</li>
+                  <li>Ingredient 3</li>
+                </ul>
+              </div>
             </div>
           </div> 
           <div data-directions> <!-- non-sidebar -->
